Restore empty filename check

Otherwise we could end up matching with a weird ".../.desktop" entry.

BUG: 427979